--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,15 +1,20 @@
 .navbar {
     background-color: #68D5B6;
     overflow: hidden;
-    display: grid;
-    grid-template-columns: auto 1fr auto;
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1em 0;
+    padding: 10px 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.navbar:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .logo-container {
-    justify-self: start;
+    margin-left: 10px;
 }
 
 .logo {
@@ -18,38 +23,80 @@
 
 .nav-links {
     list-style: none;
+    display: flex;
+    gap: 20px;
     margin: 0;
     padding: 0;
-    display: flex;
     justify-content: center;
 }
 
 .nav-links li {
-    margin: 0 1em;
+    position: relative;
 }
 
-.nav-links a {
+.nav-links li a {
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+    transition: background-color 0.3s ease;
+    border-radius: 5px;
+}
+
+.nav-links li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 100%;
+    left: 0;
+}
+
+.dropdown-content li {
+    padding: 10px;
+}
+
+.dropdown-content li a {
     color: black;
     text-decoration: none;
     display: block;
-    padding: 1em;
+    padding: 10px;
 }
 
-.nav-links a:hover {
-    background-color: #EAD7BB;
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropdown-content li a:hover {
+    background-color: #ddd;
 }
 
 .auth-links {
     display: flex;
-    flex: 1;
-    justify-content: flex-end;
+    align-items: center;
+    margin-right: 10px;
 }
 
 .auth-link {
+    background-color: transparent;
+    border: none;
     color: black;
-    text-decoration: none;
-    margin-left: 1em;
-    padding: 1em;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 .auth-link:hover {
@@ -65,9 +112,13 @@
 }
 
 .auth-link i {
-    margin-right: 0.5em;
+    margin-right: 5px;
+}
+
+.auth-link span {
+    margin-left: 5px;
 }
 
 .auth-link a:hover {
-    background-color: #EAD7BB;
+    background-color: rgba(255, 255, 255, 0.1);
 }
