--- a/src/components/ProductDetails.css
+++ b/src/components/ProductDetails.css
@@ -83,15 +83,17 @@
   margin-right: 10px;
 }
 
+/* แก้ */
 .store-button {
   background-color: #007bff;
+  width: 100px;
   color: white;
-  padding: 5px 10px;
+  padding: 5px 20px;
   text-decoration: none;
   border-radius: 4px;
   transition: background-color 0.2s;
   margin-left: auto;
-}
+}}
 
 .store-button:hover {
   background-color: #0056b3;
