--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,104 @@
   background-color: #68D5B6;
 }
 
+/* เพิ่มเติมตรงค้นหา */
+.search-container {
+  padding: 20px;
+}
+
+.search-results {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.product-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.product-card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 220px;
+  cursor: pointer;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  background-color: white;
+  padding: 20px;
+  position: relative;
+}
+
+.product-card:hover {
+  transform: scale(1.05);
+}
+
+.product-image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  margin-bottom: 15px;
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  /* justify-content: center; */
+}
+
+.product-name {
+  font-size: 15px;
+  margin: 10px 0;
+  font-weight: bold;
+}
+
+.product-price {
+  font-size: 16px;
+  color: #888;
+  text-decoration: line-through;
+}
+
+.product-price-new {
+  font-size: 16px;
+  color: #000;
+  margin-left: 5px;
+  text-decoration: none;
+}
+
+.price-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.store-price {
+  font-size: 14px;
+  color: #040d17;
+  margin-top: 10px;
+  display: block;
+  cursor: pointer;
+}
+
+.store-button{
+  width: 50px;
+  height: auto;
+  margin-right: 5px;
+}
+
+.store-info{
+display: flex;
+/* justify-content: center; */
+align-items: center;
+}
+
 /* สไตล์สำหรับหมวดหมู่ */
 .categories {
   text-align: center;
