--- a/src/App.css
+++ b/src/App.css
@@ -277,6 +277,8 @@ display: flex;
 align-items: center;
 }
 
+
+
 /* สไตล์สำหรับหมวดหมู่ */
 .categories {
   text-align: center;
@@ -329,4 +331,76 @@ h1 {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+}
+
+/* จัดรูปแบบพื้นฐาน */
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+}
+
+/* ส่วนของเนวิเกชันบาร์ */
+nav {
+  /* background-color: #2ecc71; */
+  padding: 10px;
+}
+
+nav a {
+  color: #000000;
+  text-decoration: none;
+  margin: 0 15px;
+  font-weight: bold;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+/* ส่วนของเนื้อหา */
+/* .container {
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+} */
+
+h1 {
+  text-align: center;
+  color: #3f1e1e;
+}
+
+/* จัดรูปแบบลิงก์ประเภทเมล็ดพันธุ์ */
+.seed-type {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.seed-type a {
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.seed-type a:hover {
+  background-color: #2980b9;
+}
+
+/* ส่วนของ footer */
+footer {
+  background-color: #0e2317;
+  color: #ffffff;
+  text-align: center;
+  padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
